# German-Notebook

./: 404.html  README.md  index.html  pyproject.toml  search.html  sitemap.xml
basics/: index.html
grammar/basics/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md  test1.md  test2.md
mkdocs/docs/grammar/: basics.md
mkdocs/docs/vocabulary/: adverbs.md  category1.md  nouns.md  numbers.md  pronouns.md  verbs.md
new2/: index.html
search/: search_index.json
test1/: index.html
test2/: index.html
vocabulary/adverbs/: index.html
vocabulary/category1/: index.html
vocabulary/dictionary/: index.html
vocabulary/nouns/: index.html
vocabulary/numbers/: index.html
vocabulary/pronouns/: index.html
vocabulary/verbs/: index.html
